tests/regression/errors/basic/type_error_21.csd
// Type error test 21
sus number drip = 21
sus text tea = "string_21"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 21:", wrong)
